# yt-live-translator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.yaml  dub.py  group.py  merge.py  pyproject.toml  segment.py  transcribe.py  translate.py  tts.py
.github/workflows/: ci.yml
docs/: dubbing-improvements.md
docs/superpowers/plans/: 2026-04-18-context-aware-translation.md  2026-05-03-aya-vs-gemma.md  2026-05-03-srt-subtitles.md
docs/superpowers/specs/: 2026-04-08-voice-translator-design.md  2026-04-18-context-aware-translation-design.md  2026-05-03-aya-vs-gemma-design.md  2026-05-03-srt-subtitles-design.md  2026-05-07-subtitles-no-wrap-cap-design.md
experiments/aya_vs_gemma/: Mastering Claude Code in 30 minutes_translations.md  run.py
experiments/results/: 2026-05-02-trim-benchmark.md  2026-05-03-aya-vs-gemma.md  2026-05-03-srt-subtitles.md
src/: dub.py  merge.py  subtitles.py  transcribe.py  translate.py  tts.py
tests/: test_dub.py  test_group.py  test_merge.py  test_segment.py  test_subtitles.py  test_transcribe.py  test_translate.py  test_tts.py
