[project]
name = "voice-translator"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faster-whisper",
    "TTS",
    "ffmpeg-python",
    "requests",
    "pyyaml",
]

[dependency-groups]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_translator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
