[project]
name = "voice-translator"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faster-whisper",
    "TTS",
    "transformers>=4.33.0,<4.41.0",
    "ffmpeg-python",
    "requests",
    "pyyaml",
]

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
