[project]
name = "voice-translator"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faster-whisper",
    "torch",
    "numpy",
    "omegaconf",
    "num2words",
    "ffmpeg-python",
    "requests",
    "pyyaml",
]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.6", "pre-commit>=3.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
